WISH: load system-wide config file even if we don't have one
WISH: look into XAddConnectionWatch, does anybody need that?
WISH: anyevent mouse notification / manage MotionMask better.
WISH: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep scrollbar look.
WISH: kick out xpm.C, replace by pixbuf
DUMB: support tex fonts

TODO: fix crash because strwidth returning -1 in selection-popup

7.9  Mon Aug  7 18:16:07 CEST 2006
        - fix the crashing bug people encountered with 7.8 + urxvtd + perl
          + transparency. Ought to fix debian bug #380348.
	- fix urxvtc.1.pod: it actually claimed -pty-fd would not work. But
          it does! :->
	- rxvt_fatal() in case the locale string is too long for our static buffer.
        - fixed many, many, typos in the manpages (patch supplied by ves).

7.8  Mon Jul 17 21:00:46 CEST 2006
	- INCOMPATIBLE CHANGE: this version will always read ~/.Xdefaults,
          earlier versions only read it if display-resources (usually from
          .Xresources) are not set. This avoids the #1 FAQ ("why isn't my
          resource used") and seems to be logical behaviour, too. .Xdefaults
          resources have a lower priority than display-specific resources.
        - add "kuake" perl extension that does a similar thing to the kuake
          terminal emulator (see man urxtvperl).
        - use less "correct" color scaling that is compatible with libX11 and
          Xft (avoids off-by-one colors resulting in striped backgrounds).
        - the "depth" resource is now respected.
        - preset the searchable-scrollback pattern with "(?i)" to default search
          to case-insensitivity. Will automatically be cleared when typing an
          uppercase character.
	- add FORCE_UNBUFFERED_XFT define to features.h.
        - re-enabled highlightcolor support with --enable-frills, based on
          a patch by Martin Stubenschrott.